update R-ints manual for variableFonts capability in graphics devices
git-svn-id: https://svn.r-project.org/R/trunk@89301 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3050,6 +3050,13 @@ this component should be set to 1.
 If the device does not provide support, this component should
 be set to 0.
 
+@item The @code{variableFonts} component reports whether variable fonts
+(when rendering glyphs, e.g., via @code{grDevices::glyphFont()}) are supported.
+If the device supports variable fonts
+this component should be set to 1.
+If the device does not provide support, this component should
+be set to 0.
+
 @end itemize
 
 The graphics engine provides constants like 
