warn on optional features in libraries
git-svn-id: https://svn.r-project.org/R/trunk@89427 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -5520,6 +5520,10 @@ imported or suggested package but needed for examples, tests or
 vignettes in the package itself.  Such usages should always be declared
 and conditional.
 
+The same considerations apply to optional features in external
+libraries. For example, @acronym{GDAL} can read hundreds of data formats
+but support for most of them is optional when it is built.
+
 Interpreters for scripting languages such as Perl, Python and Ruby need
 to be declared as system requirements and used conditionally: for
 example macOS 10.16 was announced not to have them (but released as
