--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1633,7 +1633,8 @@ the default is @code{xz} for files bigger than 1MB otherwise
 @code{gzip}.
 
 Lazy-loading is not supported for very large datasets (those which when
-serialized exceed 2GB, the limit for the format on 32-bit platforms).
+serialized exceed 2GB, which was the limit for the format on 32-bit
+platforms).
 
 @node Non-R scripts in packages
 @subsection Non-R scripts in packages
@@ -5653,7 +5654,7 @@ for routine use.  Most @R{} platforms use @cputype{ix86} or
 @cputype{x86_64} CPUs: these may use extended precision registers on
 some but not all of their @abbr{FPU} instructions.  Thus the achieved precision
 can depend on the compiler version and optimization flags---our
-experience is that 32-bit builds tend to be less precise than 64-bit
+experience is that 32-bit builds tended to be less precise than 64-bit
 ones.  But not all platforms use those CPUs, and not all@footnote{Not
 doing so is the default on Windows, overridden for the @R{}
 executables.} which use them configure them to allow the use of extended
@@ -6793,14 +6794,14 @@ that other users will not have.
 For Windows, check what other DLLs your package's DLL depends on
 (`imports' from in the DLL tools' parlance).  A convenient GUI-based
 tool to do so is `Dependency Walker'
-(@uref{https://www.dependencywalker.com/}) for both 32-bit and 64-bit
-DLLs -- note that this will report as missing links to @R{}'s own DLLs
-such as @file{R.dll} and @file{Rblas.dll}.  The command-line tool
-@command{objdump} in the appropriate toolchain will also reveal what
-DLLs are imported from.  If you use a toolchain other than one provided
-by the @R{} developers or use your own makefiles, watch out in
-particular for dependencies on the @I{toolchain}'s runtime DLLs such as
-@file{libgfortran}, @file{libstdc++} and @file{libgcc_s}.
+(@uref{https://www.dependencywalker.com/}) -- note that this will report
+as missing links to @R{}'s own DLLs such as @file{R.dll} and
+@file{Rblas.dll}.  The command-line tool @command{objdump} in the
+appropriate toolchain will also reveal what DLLs are imported from.  If
+you use a toolchain other than one provided by the @R{} developers or
+use your own makefiles, watch out in particular for dependencies on the
+@I{toolchain}'s runtime DLLs such as @file{libgfortran},
+@file{libstdc++} and @file{libgcc_s}.
 
 For macOS, using @code{R CMD otool -L} on the package's shared object(s)
 in the @file{libs} directory will show what they depend on: watch for
@@ -11528,7 +11529,7 @@ package, for example for debugging, they can use
 
 Sometimes registering native routines or using a @code{PACKAGE} argument
 can make a large difference.  The results can depend quite markedly on
-the OS (and even if it is 32- or 64-bit), on the version of @R{} and
+the OS, on the version of @R{} and
 what else is loaded into @R{} at the time.
 
 To fix ideas, first consider @code{x86_64} OS 10.7 and @R{} 2.15.2.  A
