Remove Rf_isFrame.
git-svn-id: https://svn.r-project.org/R/trunk@89488 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -17886,7 +17886,7 @@ SEXP Rf_allocLang(int n)
 #endif
 
 #if R_VERSION < R_Version(4, 5, 0)
-# define isDataFrame(x) Rf_isFrame(x)
+# define Rf_isDataFrame(x) Rf_isFrame(x)
 # define R_ClosureFormals(x) FORMALS(x)
 # define R_ClosureEnv(x) CLOENV(x)
 # define R_ParentEnv(x) ENCLOS(x)
